--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
 
     <script>
         document.getElementById('moveButton').addEventListener('click', function() {
-            window.location.href = '/submit';
+            window.location.href = '/report';
         });
     </script>
 
