--- a/views/report.ejs
+++ b/views/report.ejs
@@ -69,6 +69,7 @@
     const daySelect = document.getElementById('day');
     const currentYear = new Date().getFullYear();
 
+    // Populate year dropdown
     for (let i = 2023; i <= 2100; i++) {
         const option = document.createElement('option');
         option.value = i;
@@ -76,6 +77,7 @@
         yearSelect.appendChild(option);
     }
 
+    // Populate month dropdown
     for (let i = 1; i <= 12; i++) {
         const option = document.createElement('option');
         option.value = i;
@@ -83,6 +85,7 @@
         monthSelect.appendChild(option);
     }
 
+    // Populate day dropdown
     function populateDays(month) {
         daySelect.innerHTML = '';
         let days = 31;
